[add-database] add tests and refactor code